<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="co.edu.unal.mycontacts.AddContactActivity">

<!-- TODO: Update blank fragment layout -->

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="24dp"
        android:orientation="vertical"
        android:background="@drawable/card_bg"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_contact_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/botton_text_size_large"
            android:textColor="@color/primary_dark"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_contact_label" />

        <TextView
            android:id="@+id/add_contact_name_title"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:textColor="@color/shadow"
            android:autoLink="web"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/name_label"
            android:textSize="@dimen/botton_text_size_small"/>

        <EditText
            android:id="@+id/add_contact_name_edit"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:textColor="@color/accent"
            android:autoLink="web"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/name_label_help"
            android:textSize="@dimen/botton_text_size_small"/>

        <TextView
            android:id="@+id/add_contact_email_title"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:textColor="@color/shadow"
            android:autoLink="web"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/email_label"
            android:textSize="@dimen/botton_text_size_small"/>

        <EditText
            android:id="@+id/add_contact_email_edit"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:textColor="@color/accent"
            android:autoLink="web"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email_label_help"
            android:textSize="@dimen/botton_text_size_small"/>

        <TextView
            android:id="@+id/add_contact_phone_title"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:textColor="@color/shadow"
            android:autoLink="web"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/phone_label"
            android:textSize="@dimen/botton_text_size_small"/>

        <EditText
            android:id="@+id/add_contact_phone_edit"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:textColor="@color/accent"
            android:autoLink="web"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:inputType="phone"
            android:ems="10"
            android:hint="@string/phone_label_help"
            android:textSize="@dimen/botton_text_size_small"/>

        <TextView
            android:id="@+id/add_contact_address_title"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:textColor="@color/shadow"
            android:autoLink="web"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/address_label"
            android:textSize="@dimen/botton_text_size_small"/>

        <EditText
            android:id="@+id/add_contact_address_edit"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:textColor="@color/accent"
            android:autoLink="web"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:inputType="text"
            android:ems="10"
            android:hint="@string/address_label_help"
            android:textSize="@dimen/botton_text_size_small"/>

    </LinearLayout>

</LinearLayout>

<!-- Button bar -->
<LinearLayout
    android:layout_height="48dp"
    android:layout_gravity="bottom"
    android:layout_width="match_parent">

    <Button
        android:id="@+id/ok_add_contact"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@color/green"
        android:text="@string/ok_label"
        android:textColor="#fff"
        android:textSize="@dimen/botton_text_size_medium"
        android:textAllCaps="true"/>

</LinearLayout>


</LinearLayout>
